[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Booleabayes_smgroves"
version = "0.0.1"
authors = [
  { name="Sarah Groves", email="sarahmaddoxgroves@gmail.com" },
]
description = "A suite for network inference from transcriptomics data"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/smgroves/BooleaBayes"
"Bug Tracker" = "https://github.com/smgroves/BooleaBayes/issues"
